web-app/css/timeout.css
/*******************************************************************************
 Copyright 2009-2018 Ellucian Company L.P. and its affiliates.
*******************************************************************************/

.dialog-mask {
    width: 100%;
    height: 90%;
    display: table;
}
.dialog-wrapper {
    display: table-cell;
    vertical-align: middle;
    color: #8A6A00; /*EDS*/
    font-size: .875em
}
.dialog {
    background: #F5F2E7 url("../images/info-CO.png") no-repeat 1em 1em; /*EDS*/
}
.custom-logout-dialog {
    background: #F5F2E7 url("../images/check-mark-sm.svg") no-repeat 1em 1em; /*EDS*/
}
.dialog,
.custom-logout-dialog {
    position: relative;
    margin-left: 1em;
    margin-right: 1em;
    background-size: 2em;
}
.dialog-content,
.dialog-content-no-action {
    padding: 1em;
    border-bottom: none;
    border-radius: 5px 5px 0 0;
}
.dialog-content-no-action {
    border-radius: 5px 5px 5px 5px;
}
.dialog-sign {
    text-align: center;
}
.title {
    font-family: "OpenSans-bold";
    padding-left: 3em;
    padding-bottom: 1em;
}
.message {
    font-family: "OpenSans-Regular";
    padding-left: 3em;
}
.common-button-primary {
    font-size: .875em;
    font-family: "OpenSans-Semibold";
    border:none;
    background-color: #F5F2E7; /*EDS*/
    border-top: 1px solid #8A6A00; /*EDS*/
    color: #8A6A00;/*EDS*/
    cursor: pointer;
    text-transform: none;
    overflow: visible;
    margin: 0 auto;
    height: 100%;
    width: 100%;
    padding-top: .75em;
    padding-bottom: .75em;
    border-radius: 0 0 5px 5px;
}
.common-button-primary:focus {
    border: 1px solid #026BC8;
    outline: none;
}
@media only screen and (min-width: 1024px) {
    .dialog,
    .custom-logout-dialog {
        width: 40em;
        margin: auto;
    }
}

